// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders Link correctly 1`] = `
<a
  aria-disabled={undefined}
  className=
      ms-Link
      {
        color: #0078d4;
        outline: transparent;
        position: relative;
        text-decoration: none;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #666666;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      &:active, &:hover, &:active:hover {
        color: #004578;
      }
      &:focus {
        color: #0078d4;
      }
  href="#"
  onClick={[Function]}
  target={undefined}
>
  I'm a link
</a>
`;

exports[`Link renders Link with a custom class name 1`] = `
<a
  aria-disabled={undefined}
  className=
      ms-Link
      customClassName
      {
        color: #0078d4;
        outline: transparent;
        position: relative;
        text-decoration: none;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #666666;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      &:active, &:hover, &:active:hover {
        color: #004578;
      }
      &:focus {
        color: #0078d4;
      }
  href="#"
  onClick={[Function]}
  target={undefined}
>
  I'm a link
</a>
`;

exports[`Link renders Link with no href as a button 1`] = `
<button
  aria-disabled={undefined}
  className=
      ms-Link
      {
        background: none;
        border: none;
        color: #0078d4;
        cursor: pointer;
        display: inline;
        font-size: inherit;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        outline: transparent;
        overflow: inherit;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
        text-align: left;
        text-overflow: inherit;
        user-select: text;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #666666;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      &:active, &:hover, &:active:hover {
        color: #004578;
      }
      &:focus {
        color: #0078d4;
      }
  onClick={[Function]}
>
  I'm a link as a button
</button>
`;

exports[`Link renders disabled Link correctly 1`] = `
<a
  aria-disabled={true}
  className=
      ms-Link
      is-disabled
      {
        color: #a6a6a6;
        cursor: default;
        outline: transparent;
        position: relative;
        text-decoration: none;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #666666;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      &:link, &:visited {
        pointer-events: none;
      }
  href="#"
  onClick={[Function]}
  target={undefined}
>
  I'm a disabled link
</a>
`;

exports[`Link renders disabled Link with no href as a button correctly 1`] = `
<button
  aria-disabled={true}
  className=
      ms-Link
      is-disabled
      {
        background: none;
        border: none;
        color: #a6a6a6;
        cursor: default;
        display: inline;
        font-size: inherit;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        outline: transparent;
        overflow: inherit;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
        text-align: left;
        text-overflow: inherit;
        user-select: text;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #666666;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      &:link, &:visited {
        pointer-events: none;
      }
  disabled={true}
  onClick={[Function]}
>
  I'm a link as a button
</button>
`;
